Solving ui alignment issues on about-us page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,7 +280,7 @@ main > .section > .carousel-wrapper {
 
 main > .section.underline h2{
   padding-bottom: 12px;
-  width: 50%;
+  /* width: 50%; */
   position: relative;
   margin-bottom: 12px;
 }
@@ -316,6 +316,13 @@ main .section > .author-wrapper:has(.separator) {
   font-size: 16px;
 }
 
+main .section.about-us p{
+  font-size: 14px;
+}
+
+main .section.about-us h1{
+  margin-block: 48px;
+}
 
 @media (width >= 900px) {
   main > .section > div {
@@ -323,7 +330,7 @@ main .section > .author-wrapper:has(.separator) {
   }
 
   main > .section.underline h2::before{
-    width: 15%;
+    width: 10%;
   }
 
   main .carousel-wrapper + .default-content-wrapper > p {
